updates feb 3